@@ -8,7 +8,7 @@ class Player;
 //! the game configuration, which can mostly be altered by command line settings
 struct Configuration {
 	//! the constructor preinitializing default values
-	inline Configuration() : version("9"),
+	inline Configuration() : version("10"),
 		width(1024), height(768), bpp(32), fullscreen(false),
 		playername("Hans"), mode(SERVER), servername(""), port(6642) {}
 	//! the game's network protocol version (libgrapple wants a string here)
